# tutogit-champions

./: CMakeLists.txt  DataTypes.cpp  DataTypes.h  ScanHugeNumber.c  ShowHugeNumber.c  ShowHugeNumber.h  main.c
DataTypes/: DoublyLinkedList.c  DoublyLinkedList.h
IHMHugeNumber/: ScanHugeNumber.h
UseHugeNumber/Operator/: HugeFloatOperator.c  HugeFloatOperator.h  HugeIntOperator.c  HugeIntOperator.h  HugeUnsignedIntOperator.c  HugeUnsignedIntOperator.h
UseHugeNumber/Type/: HugeFloat.c  HugeFloat.h  HugeInt.c  HugeInt.h  HugeUnsignedInt.c  HugeUnsignedInt.h
